[project]
name = "langgraph-course"
version = "0.1.0"
description = "This repository contains modular, hands-on examples exploring key concepts and components in building LLM-powered applications using Python, LangChain, LangGraph and agentic AI workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-ollama>=0.3.5",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "notebook>=7.4.4",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]
